--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-    "title":"Blog Title",
-    "subTitle":"Blog description",
-    "avatarUrl":"https://github.githubassets.com/favicons/favicon.svg",
+    "title":"石河子王卫的博客",
+    "subTitle":"我是石河子的王卫，这里记录着我的日常",
+    "avatarUrl":"https://avatars.githubusercontent.com/u/96246779?v=4&size=64",
     "GMEEK_VERSION":"last"
 }
